# Ray-Tracer

./: CMakeLists.txt  README.md
Source/Foundation/: CMakeLists.txt  _lodepng.cpp  _pcg_random.hpp  camera.cpp  camera.h  color.cpp  color.h  constants.cpp  constants.h  pixels.cpp  pixels.h  random.cpp  random.h  ray.cpp  ray.h  vector-point.cpp  vector-point.h
Source/Parse/: CMakeLists.txt  parser.cpp  parser.h
Source/World_Creation/: CMakeLists.txt  hit.cpp  hit.h  material.cpp  material.h  shapes.cpp  shapes.h  texture.cpp  texture.h  world.cpp  world.h
Test/: CMakeLists.txt  generate.py  test-vec.cpp  thread-render.cpp
Test/Input_Files/: example_input.txt  example_mesh.txt  winter_scene.txt
Test/Meshes/: leafs_mesh.txt  pyramid_mesh.txt  snowflakes_mesh.txt  stars_mesh.txt
